# AGI-Testbed

./: LICENSE  info.md  mvp.md
agi_testbed/: Cargo.toml  README.md
agi_testbed/docs/: DEVLOG.md  REFACTORING.md
agi_testbed/src/: main.rs
agi_testbed/src/core/: component.rs  metrics.rs  mod.rs  orchestrator.rs
agi_testbed/src/instances/: common.rs  memory_management.rs  mod.rs  operational_state.rs  reasoning.rs  time_scaling.rs
agi_testbed/src/instances/operational_state/: goal.rs  instance.rs  mod.rs  mode.rs  models.rs  resource.rs  task.rs
agi_testbed/src/web/: mod.rs  models.rs  server.rs
agi_testbed/src/web/handlers/: mod.rs  operational.rs  orchestrator.rs  pages.rs  system.rs  testbed.rs  time_scaling.rs
agi_testbed/src/web/static/css/: styles.css
agi_testbed/src/web/static/js/: main.js
agi_testbed/src/web/templates/: dashboard.hbs  index.hbs  layout.hbs
