[package]
name = "agi_testbed"
version = "0.1.0"
edition = "2021"
authors = ["AGI Research Team"]
description = "A testbed for AGI component testing"

[dependencies]
# Core dependencies
tokio = { version = "1.28", features = ["full"] } # Async runtime
actix-web = "4.3" # Web framework for the management interface
serde = { version = "1.0", features = ["derive"] } # Serialization/deserialization
serde_json = "1.0" # JSON support
env_logger = "0.10" # Logging
log = "0.4" # Logging
futures = "0.3" # Async utilities
chrono = "0.4" # Time handling
async-trait = "0.1" # Async trait support
uuid = { version = "1.4", features = ["v4", "serde"] } # UUID generation

# UI and visualization
actix-files = "0.6" # Static file serving
handlebars = "4.3" # Templating
plotters = "0.3" # Plotting and data visualization

# Memory management
dashmap = "5.4" # Concurrent hashmap for memory implementations
lru = "0.10" # LRU cache implementation

# Observability
tracing = "0.1" # Structured logging
tracing-subscriber = "0.3" # Logging subscribers
prometheus = "0.13" # Metrics

# Database (for persistent storage)
rusqlite = { version = "0.29", features = ["bundled"] } # SQLite

[dev-dependencies]
criterion = "0.5" # Benchmarking
mockall = "0.11" # Mocking for tests